# loading-service-2

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-rl.txt  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py
app/algorithms/: __init__.py  base.py  ga.py  heuristics.py
app/algorithms/pct/: __init__.py  attention_model.py  distributions.py  graph_encoder.py  pct_agent.py  pct_env.py  pct_model.py  ppo_trainer.py  utils.py
app/api/: __init__.py  catalog.py  solve.py
app/catalog/: __init__.py  cargo_presets.json  containers.json  imdg_segregation.json  loader.py
app/constraints/: __init__.py  cog.py  imdg.py  mask.py  reward.py
app/data/: __init__.py  alexandria_sampler.py  br_loader.py  product_pool.py
app/env/: __init__.py  ems.py  heightmap.py  packing_env.py
app/services/: __init__.py  solver.py
data/: README.md  alexandria_cargo_mix.json
data/br/: br_problems.json
notebooks/: 01_train_pct.ipynb  02_evaluate_pct.ipynb
scripts/: prepare_datasets.py
tests/: conftest.py  test_api.py  test_catalog.py  test_constraints.py  test_data.py  test_env.py  test_ga.py  test_heuristics.py  test_pct_env_and_agent.py  test_pct_model.py  test_schemas.py
